# gst-snippets

./: CMakeLists.txt
camera_streaming/: autovideosrc_rtmpsink.sh  avfvideosrc_rtmpsink.sh  nvcamerasrc_rtmpsink.sh
dynamic_pipeline/: CMakeLists.txt  rtmpsrc_vsink.c  rtmpsrc_vsink.cc  rtmpsrc_vsink.py  rtmpsrc_vsink.sh
multiview/: bin_test.py  multiview.py  r_t_c_fd.sh  rtmpsrc2_tee_vcomp_vsink.py  rtmpsrc_vcomp_vsink.py  videotestsrc2_vcomp_vsink.py
